ocp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-backend
  template:
    metadata:
      labels:
        app: webhook-backend
    spec:
      containers:
        - name: webhook-backend
          image: 'webhook-backend:latest'
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-frontend
  template:
    metadata:
      labels:
        app: webhook-frontend
    spec:
      containers:
        - name: webhook-frontend
          image: 'webhook-frontend:latest'
          ports:
            - containerPort: 5001
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-backend
spec:
  selector:
    app: webhook-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
----
apiVersion: v1
kind: Service
metadata:
  name: webhook-frontend
spec:
  selector:
    app: webhook-frontend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webhook-frontend
spec:
  to:
    kind: Service
    name: webhook-frontend
  port:
    targetPort: 5001
